--- a/Variable.html
+++ b/Variable.html
@@ -8,10 +8,15 @@
     <h1>Variables</h1>
 
     <script type="text/javascript">
+      //Defining Variable
       var name;
       name = "Hamid Ayub";
       document.write("My name is ",name); //displays output on webpage
       console.log(name); //displays output on console
+
+      //Defining Constants
+      const age = 19;
+      document.write("My age is ",age);
     </script>
 
   </body>
