--- a/Array.html
+++ b/Array.html
@@ -5,7 +5,7 @@
     <title>JavaScript</title>
   </head>
   <body>
-    <h1>Variables</h1>
+    <h1>Arrays</h1>
 
     <script type="text/javascript">
       //Defining Variable
