Added String Slicing

--- a/Variable.html
+++ b/Variable.html
@@ -16,8 +16,11 @@
 
       //Defining Constants
       const age = 19;
-      document.write("My age is ",age);
-      
+      document.write("\nMy age is ",age);
+
+      //String Slicing
+      document.write("\n",name.slice(0,5));
+
     </script>
 
   </body>
