Defining Array inside Objects

--- a/Objects.html
+++ b/Objects.html
@@ -12,9 +12,10 @@
       var my_info = {
         name: 'Hamid Ayub',
         age: 19,
-        degree: "SE"
-      };
-      document.write("My Name: ",my_info.name);
+        degree: "SE",
+        subjects: ['FoP','OOP','DSA','DAA','Web Programming']
+      }
+      document.write("My Subjects are ",my_info.subjects);
     </script>
 
   </body>
